k8s/multiple-services/service1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-deployment
  labels:
    app: service1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
        - name: service1
          image: nginx:1.16
          ports:
            - containerPort: 80
          volumeMounts:
            - name: index-file
              mountPath: /usr/share/nginx/html/
      volumes:
        - name: index-file
          configMap:
            name: service1-configmap
