k8s/multiple-services/service2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment
  labels:
    app: service2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          image: nginx:1.16
          ports:
            - containerPort: 80
          volumeMounts:
            - name: index-file
              mountPath: /usr/share/nginx/html/
      volumes:
        - name: index-file
          configMap:
            name: service2-configmap
