k8s/multiple-services/multiple-hosts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multiple-hosts-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bar.foo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service1-service
                port:
                  number: 80
    - host: alice.bob
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service2-service
                port:
                  number: 80
